force-app/main/default/objects/Customer_Master__c/Customer_Master__c.object-meta.xml
<CustomObject>
    <label>Customer Master</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Customer Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>