force-app/main/default/objects/Customer_Master__c/fields/IOC_No__c.field-meta.xml
<CustomField>
    <fullName>IOC_No__c</fullName>
    <label>IOC No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>