force-app/main/default/objects/Customer_Master__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>30</length>
    <type>Text</type>
</CustomField>